<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/baseline_tune_24"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_title"
                android:title="@string/action_sort_by_title" />
            <item
                android:id="@+id/action_sort_date_created"
                android:title="@string/action_sort_by_date_created" />
            <item
                android:id="@+id/action_sort_date_modified"
                android:title="@string/action_sort_by_date_modified" />
        </menu>
    </item>

    <item
        android:id="@+id/action_labels"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/labels"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/action_delete_selected"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup"
        android:title="@string/backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/restore_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>