<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notesFragment">

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.xr.notes.ui.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_notesFragment_to_addEditNoteFragment"
            app:destination="@id/addEditNoteFragment" />
        <action
            android:id="@+id/action_notesFragment_to_labelsFragment"
            app:destination="@id/labelsFragment" />
        <action
            android:id="@+id/action_notesFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_notesFragment_to_restoreFragment"
            app:destination="@id/restoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditNoteFragment"
        android:name="com.xr.notes.ui.AddEditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_add_edit_note">
        <argument
            android:name="noteId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/labelsFragment"
        android:name="com.xr.notes.ui.LabelsFragment"
        android:label="@string/labels"
        tools:layout="@layout/fragment_labels">
        <action
            android:id="@+id/action_labelsFragment_to_labelNotesFragment"
            app:destination="@id/labelNotesFragment" />
    </fragment>

    <fragment
        android:id="@+id/labelNotesFragment"
        android:name="com.xr.notes.ui.LabelNotesFragment"
        android:label="{labelName}"
        tools:layout="@layout/fragment_notes">
        <argument
            android:name="labelId"
            app:argType="long" />
        <argument
            android:name="labelName"
            app:argType="string" />
        <action
            android:id="@+id/action_labelNotesFragment_to_addEditNoteFragment"
            app:destination="@id/addEditNoteFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.xr.notes.ui.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/restoreFragment"
        android:name="com.xr.notes.ui.RestoreFragment"
        android:label="@string/restore_backup" />

</navigation>